2002-08-11  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/regression/tuplet-properties.ly:
	* input/regression/tuplet-nest.ly: Fix.

	* lilypond-font-lock.el (LilyPond-font-lock-keywords):
	* input/test/improv.ly:
	* input/test/cautionaries.ly: Accidentals -> Accidental.

	* input/test/add-text-script.ly: Bugfix.  How did this ever work?

	* Documentation/windows/installing.texi: 
	* Documentation/windows/compiling.texi:
	* cygwin/README: Update to reflect new binary release setup and
	build instructions.

2002-08-10  Jan Nieuwenhuizen  <janneke@gnu.org>

	* server.el.patch: Update.

2002-08-10  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* stepmake/stepmake/metafont-rules.make: pktrace -> mftrace name
	change.
	* configure.in: idem

2002-08-10  Juergen Reuter  <reuter@ipd.uka.de>

	* mf/parmesan-timesig.mf, scm/output-lib.scm,
	lily/include/time-signature.hh, lily/time-signature.cc,
	input/test/time.ly: fixed broken time-signature by setting grob
	property font-family automatically.

2002-08-10  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/tutorial.itely (Running LilyPond): Mention
	xdvi and XFree86 option for Windows users.

	* Documentation/user/invoking.itexi: Add ly2dvi's -p alias.

	* scripts/ly2dvi.py: Bugfix for `ly2dvi -I ./foo foo.ly'.  Also
	append directory of first file to search path, allowing
	`ly2dvi	foo/foo.ly' when foo.ly includes other files from
	directory foo.  Add short option alias '-p' for --pdf.

	* input/test/trills.ly: 
	* input/test/preset-extent.ly: 
	* scm/grob-property-description.scm: more extent renaming.

2002-08-09  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/parse-scm.cc (protected_ly_parse_scm): compatibility with
	CVS GUILE 

	* input/test/preset-extent.ly (texidoc): added file.

	* scripts/convert-ly.py: add extent rule.

	* lily/grob.cc: change extent-[XY] to [XY]-extent globally.

2002-08-09  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/main.cc (main): Remove stale #ifdef for windows.
