@@ -1,5 +1,10 @@
 2002-08-11  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* GNUmakefile.in: Fix config.h dependency.
+
+	* input/test/beam-dir-function.ly: Fix for new default
+	neutral-direction = -1 (down).
+
 	* input/regression/tuplet-properties.ly:
 	* input/regression/tuplet-nest.ly: Fix.
 
